--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Header + Hero section */
+
 .hero-section {
     background-color: #1F2937;
     color: #F9FAF8;
@@ -73,9 +75,10 @@ button.sign-up {
     font-weight: bold;
 }
 
-.hero-img img {
+img {
     max-width: 100%;
     max-height: 100%;
+    border-radius: 15px;
 }
 
 .hero-img {
@@ -88,4 +91,41 @@ a {
     font-size: 18px;
     font-weight: lighter;
     color: #E5E7EB;
+}
+
+/* Information section */
+
+.info-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    padding-top: 48px;
+    padding-left: max(48px, 20%);
+    padding-right: max(48px, 20%);
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+}
+
+.info-content {
+    display: flex;
+    gap: 36px;
+}
+
+.info-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    max-width: 400px;
+}
+
+.subtext {
+    text-align: center;
+    font-size: 18px;
+    color: #585c61;
 }
