--- a/style.css
+++ b/style.css
@@ -3,18 +3,30 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Header + Hero section */
+img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: lighter;
+    color: #E5E7EB;
+}
+
+/* ----------- Header + Hero section -------------- */
 
 .hero-section {
     background-color: #1F2937;
     color: #F9FAF8;
     display: flex;
     flex-direction: column;
-    /* padding-left: 100px;
-    padding-right: 100px; */
+    padding-top: 12px;
     padding-left: max(48px, 15%);
     padding-right: max(48px, 15%);
-    padding-bottom: 48px;
+    padding-bottom: 80px;
 }
 
 .header {
@@ -68,17 +80,11 @@ body {
 button.sign-up {
     padding: 8px 16px;
     border-radius: 8px;
-    background: royalblue;
-    border: 1px solid royalblue;
+    background: #3882F6;
+    border: 1px solid #3882F6;
     max-width: 100px;
     color: inherit;
     font-weight: bold;
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 15px;
 }
 
 .hero-img {
@@ -86,14 +92,7 @@ img {
     max-width: 700px;
 }
 
-a {
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: lighter;
-    color: #E5E7EB;
-}
-
-/* Information section */
+/* --------- Information section ------------ */
 
 .info-section {
     display: flex;
@@ -103,6 +102,7 @@ a {
     padding-top: 48px;
     padding-left: max(48px, 20%);
     padding-right: max(48px, 20%);
+    padding-bottom: 80px;
 }
 
 .info-header {
@@ -128,4 +128,95 @@ a {
     text-align: center;
     font-size: 18px;
     color: #585c61;
+}
+
+/* ------------- Quotes section ----------- */
+
+.quotes-section {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding-top: 100px;
+    padding-left: max(48px, 15%);
+    padding-right: max(48px, 15%);
+    padding-bottom: 100px;
+}
+
+.quote {
+    flex: 2;
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.author {
+    flex: 1;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 48px;
+}
+
+/* ------------ Call to Action section ---------- */
+
+.action-section {
+    padding-top: 100px;
+    padding-left: max(48px, 15%);
+    padding-right: max(48px, 15%);
+    padding-bottom: 100px;
+}
+
+.action-box {
+    background-color: #3882F6;
+    display: flex;
+    justify-content: space-around;
+    padding: 48px;
+    border-radius: 16px;
+    gap: 12px;
+}
+
+.action-text {
+    color: #F9FAF8;
+    /* flex: 2; */
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.action-header {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.action-subtext {
+    font-size: 18px;
+}
+
+button.action-button {
+    padding: 8px 16px;
+    border-radius: 8px;
+    background: #3882F6;
+    border: 1px solid #F9FAF8;
+    border-width: 2px;
+    max-width: 200px;
+    color: #F9FAF8;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+/* ------------------ Footer ---------------- */
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    padding: 24px;
+}
+
+.footer-text {
+    color: #F9FAF8;
+    font-size: 18px;
+    font-weight: lighter;
 }
